--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "https://atsuya-m.github.io/posts"
 defaultContentLanguage = "ja"
 languageCode = "ja-jp"
 # Add it only if you keep the theme in the `themes` directory.
